# openapi_petstore_fastapi

./: .flake8  Dockerfile  README.md  openapi.yaml  pyproject.toml  requirements.txt  setup.cfg
.openapi-generator/: FILES
scripts/: generate_reference.py
src/openapi_server/: main.py  security_api.py
src/openapi_server/apis/: pet_api.py  store_api.py  user_api.py
src/openapi_server/models/: address.py  category.py  customer.py  order.py  pet.py  user.py
tests/: test_pet_api.py  test_store_api.py  test_user_api.py
tests/reference/: swagger2.json
